working on inductive exercises

--- a/inductive-python/01_python-as-a-calculator.ipynb
+++ b/inductive-python/01_python-as-a-calculator.ipynb
@@ -13,25 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "8*8"
    ]
@@ -49,24 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4\n",
-      "5.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print((5+5)/25)\n",
     "print(5 + 5/25)"
@@ -100,25 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "361.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(5*5 + 4/2 - 8)**2"
    ]
@@ -168,6 +137,17 @@
    },
    "source": [
     "Python gives very informative errors (if you know how to read them).  What do you think `NameError` means?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "`NameError` means that the current python \"interpreter\" does know what `sin` means"
    ]
   },
   {
@@ -255,6 +235,7 @@
    },
    "outputs": [],
    "source": [
+    "# for example\n",
     "math."
    ]
   },
@@ -373,7 +354,7 @@
     }
    },
    "source": [
-    "What happened?  `SyntaxError` is something python can't interpret."
+    "What happened?  "
    ]
   },
   {
@@ -384,6 +365,8 @@
     }
    },
    "source": [
+    "`SyntaxError` is something python can't interpret.\n",
+    "\n",
     "In python, `=` means store the output of the stuff on the **right** in the variable on the **left**.  It's nonsensical to try to store anything in `5*5`, so the command fails."
    ]
   },
@@ -482,21 +465,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "82104.40371976183\n",
-      "82108.92783681436\n"
-     ]
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
-   "source": []
+   },
+   "outputs": [],
+   "source": [
+    "n = 19\n",
+    "print(math.log(math.factorial(n)), n*math.log(n) - n + 1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Summary\n",
+    "\n",
+    "+ Python behaves like a calculator (order of operations, etc.). \n",
+    "+ You can assign the results of calculations to variables using \"`=`\"\n",
+    "+ Python does the stuff on the right first, then assigns it to the name on the left.\n",
+    "+ You can access more math by `import math`"
+   ]
   }
  ],
  "metadata": {
