--- a/inductive-python/02_conditionals.ipynb
+++ b/inductive-python/02_conditionals.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Conditional Execution\n",
     "Conditional execution allows a program to only execute code if some condition is met. "
@@ -10,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Predict\n",
     "What will this code do?"
@@ -18,10 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -39,7 +50,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Predict\n",
     "What will this code do?"
@@ -47,10 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -68,7 +86,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Summarize\n",
     "What does `x < y` do?  What does it spit out?"
@@ -76,7 +98,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "`x < y` tests whether $x$ is smaller than $y$.  It returns `True` or `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Modify\n",
     "Change the following cell so it prints `False`"
@@ -84,19 +121,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "x = 20\n",
     "print (x > 2)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# one way\n",
+    "x = 1\n",
+    "print (x > 2)\n",
+    "\n",
+    "# another way\n",
+    "x = 20\n",
+    "print (x < 2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "-----------------------------------------------------------------\n",
     "\n",
@@ -106,11 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "if x > 2:\n",
@@ -120,7 +203,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Predict\n",
     "What will this code do?"
@@ -128,9 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,7 +232,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Predict\n",
     "What will this code do?"
@@ -150,9 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -173,7 +270,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Summarize\n",
     "How does the `if` statement work?"
@@ -181,7 +282,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "`if` takes something that can be interpreted `True` or `False` and then executes only if that something is `True`.  Anything indented under the `if` executes conditionally; anything not indented under the `if` runs no matter what."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Your simple comparison operators are:\n",
+    "\n",
+    " + `x < y` (less than)\n",
+    " + `x <= y` (less than or equal to)\n",
+    " + `x > y` (greater than)\n",
+    " + `x >= y` (greater than or equal to)\n",
+    " + `x == y` (is equal to)\n",
+    " + `x != y` (is not equal to)\n",
+    " \n",
+    "There are more, depending on the sorts of comparisons being made.  We'll get to them later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Modify\n",
     "Change the code above so it prints out `x`."
@@ -189,9 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -201,31 +340,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# one way\n",
+    "x = 2\n",
+    "if x < 5:\n",
+    "    print(x)\n",
+    "\n",
+    "# another way\n",
+    "x = 20\n",
+    "if x < 100:\n",
+    "    print(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Implement\n",
     "Write code that will only print `x` if x is more than 100."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if x > 100:\n",
+    "    print(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### More complicated conditionals"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Predict\n",
-    "What will this code do?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Predict\n",
     "What will this code do?"
@@ -233,24 +413,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
     "x = 2\n",
     "if x < 5 and x > 10:\n",
-    "    print(\"condition 1\")\n",
-    "    \n",
-    "x = 7\n",
-    "if x < 5 and x > 10:\n",
-    "    print(\"condition 2\")"
+    "    print(\"condition 1\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Predict\n",
     "What will this code do?"
@@ -258,32 +441,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "condition 1\n"
+     ]
+    }
+   ],
    "source": [
     "x = 2\n",
     "if x < 5 or x > 10:\n",
-    "    print(\"condition 1\")\n",
-    "    \n",
-    "x = 7\n",
-    "if x < 5 or x > 10:\n",
-    "    print(\"condition 2\")"
+    "    print(\"condition 1\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Summarize\n",
-    "How do `and` and `or` work?"
+    "How do \"`and`\" and \"`or`\" work?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "\"`and`\" and \"`or`\" let you logically concatenate `True` and `False` statements.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Modify\n",
     "Change the following code so it will print \"HERE\" if x is between 17 and 22."
@@ -293,7 +502,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -303,38 +515,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#answer \n",
+    "x = 20\n",
+    "if x > 16 and x < 23:\n",
+    "    print(\"HERE\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Implement\n",
-    "Write a conditional statement that prints x if it is negative or positive and greater than 10."
+    "Write a conditional statement that prints x if it is either negative or if it is greater than 10."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "if x < 0 or x > 10:\n",
+    "    print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### Multiple conditions\n",
-    "\n",
     "#### Predict\n",
     "What will this code do?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -362,57 +606,68 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Summarize\n",
+    "\n",
+    "How does an `if` statement decide if something is inside the `if` or not?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Python decides what is inside the conditional `if` using indentation.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#### Predict what will happen."
+    "#### Predict:\n",
+    "\n",
+    "What will this code do?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inside conditional\n",
-      "also inside conditional\n",
-      "not inside conditional\n",
-      "3\n"
+      "condition 3\n"
      ]
     }
    ],
    "source": [
     "x = 5\n",
-    "if x < 10:\n",
-    "    x = x + 10\n",
-    "    \n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Did it behave as expected?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now, modify the code so the conditional is `False`.  What will the code spit out now?"
+    "\n",
+    "if x > 10:\n",
+    "    print(\"condition 1\")\n",
+    "elif x < 0:\n",
+    "    print(\"condition 2\")\n",
+    "else:\n",
+    "    print(\"condition 3\")"
    ]
   },
   {
@@ -423,6 +678,120 @@
    },
    "outputs": [],
    "source": [
+    "XXX INTRODUCE ELIF BETTER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict\n",
+    "\n",
+    "What will this code do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x = 5\n",
+    "if x > 2:\n",
+    "    print(\"a\")\n",
+    "elif x > 1:\n",
+    "    print(\"b\")\n",
+    "else:\n",
+    "    print(\"c\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Summarize\n",
+    "\n",
+    "How does `if`, `elif`, `else` work?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "In python the:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "if CONDITION:\n",
+    "    DO_SOMETHING\n",
+    "elif SOME_OTHER_CONDITION:\n",
+    "    DO_SOMETHING_ELSE\n",
+    "elif YET_ANOTHER_CONDITION:\n",
+    "    DO_YET_ANOTHER_THING\n",
+    "else:\n",
+    "    DO_WHATEVER_WE_WANT \n",
+    "```\n",
+    "\n",
+    "construct allows different responses in response to different conditions.  If no conditions are met, whatever is under `else` is done.  If multiple conditions are met, only the first condition is met. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Modify\n",
+    "\n",
+    "Change the following program code so it prints \"condition 2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "condition 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "\n",
     "if x > 10:\n",
     "    print(\"condition 1\")\n",
     "elif x < 0:\n",
@@ -433,53 +802,56 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Explanation\n",
+    "#### Implement\n",
     "\n",
-    "In python the:\n",
-    "\n",
-    "```python\n",
-    "\n",
-    "if CONDITION:\n",
-    "    DO_SOMETHING\n",
-    "```\n",
-    "\n",
-    "construct will only `DO_SOMETHING` if `CONDITION` is `True`.  The following code will all print \"HERE\"  because the `CONDITION` bit of the `if` statement is `True` in all three cases."
+    "Write an if/elif/else statement that prints \"a\" if $x < 0$, \"b\" if $x = 0$ and \"c\" otherwise. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HERE\n",
-      "HERE\n",
-      "HERE\n"
-     ]
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "if 5 > 2:\n",
-    "    print(\"HERE\")\n",
-    "    \n",
-    "if 5 != 2:\n",
-    "    print(\"HERE\")\n",
-    "    \n",
-    "if True:\n",
-    "    print(\"HERE\")"
+    "if x < 0:\n",
+    "    print(\"a\")\n",
+    "elif x == 0:\n",
+    "    print(\"b\")\n",
+    "else:\n",
+    "    print(\"c\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Your simple comparison operators are:\n",
     "\n",
@@ -495,12 +867,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Explanation\n",
-    "\n",
-    "In python the:\n",
-    "\n",
     "```python\n",
     "\n",
     "if CONDITION:\n",
@@ -513,50 +885,12 @@
     "    DO_WHATEVER_WE_WANT \n",
     "```\n",
     "\n",
-    "construct will only `DO_SOMETHING` if `CONDITION` is `True`.  The following code will all print \"HERE\"  because the `CONDITION` bit of the `if` statement is `True` in all three cases."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Predict\n",
-    "What will this code do?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conditional 2\n",
-      "Conditional 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 5*5\n",
-    "\n",
-    "if x == 5:\n",
-    "    print(\"Conditional 1\")\n",
-    "    \n",
-    "if x > 5:\n",
-    "    print(\"Conditional 2\")\n",
-    "\n",
-    "if x != 5:\n",
-    "    print(\"Conditional 3\")\n",
-    "    "
+    "construct allows different responses in response to different conditions.  If no conditions are met, whatever is under `else` is done.  If multiple conditions are met, only the first condition is met. "
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
