--- a/inductive-python/05_tuples-and-dicts-and-strings.ipynb
+++ b/inductive-python/05_tuples-and-dicts-and-strings.ipynb
@@ -685,17 +685,10 @@
    "source": [
     "<h3><font color=\"red\">DANGER</font></h3>\n",
     "\n",
-    "The previous cells demonstrate a common (and confusing) python gotcha when dealing with lists."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "The cells above demonstrate a common (and confusing) python gotcha when dealing with lists.\n",
+    "\n",
+    "## Explanation\n",
+    "\n",
     "#### In the first case:\n",
     "\n",
     "The statement\n",
@@ -704,34 +697,17 @@
     "    another_list = some_list\n",
     "```\n",
     "\n",
-    "says that `another_list` **is** `some_list`.  These are now two labels for the same underlying object.  It does **not** create a new object. If I change `some_list`, it changes `another_list` because they are the same thing. In programming terms, `another_list` and `some_list` are both references to the same object. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "I can write:\n",
+    "says that `another_list` **is** `some_list`.  These are now two labels for the same underlying object.  It does **not** create a new object. If I change `some_list`, it changes `another_list` because they are the same thing. In programming terms, `another_list` and `some_list` are both references to the same object. \n",
+    "\n",
+    "\n",
+    "Here's an analogy. I can write:\n",
     "\n",
     "```\n",
     "Mary is also known as Jane.\n",
     "```\n",
     "\n",
-    "I can then use `Mary` or `Jane` and it will be understood both labels point to the same person.  If I say, `Jane has red hair`, it implies that `Mary` also has red hair because they are the same person. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "I can then use `Mary` or `Jane` and it will be understood both labels point to the same person.  Further, if I say, `Jane has red hair`, it implies that `Mary` also has red hair because they are the same person.  This is exactly like modifying `some_list` (Mary) and seeing the change in `another_list` (Jane).  \n",
+    "\n",
     "#### In the second case:\n",
     "\n",
     "The statement\n",
@@ -740,74 +716,197 @@
     "    another_list = copy.deepcopy(some_list)\n",
     "```\n",
     "\n",
-    "says to make a copy of `some_list` and call it `another_list`.  These are now independent. I can modify one without modifiying another.  (In programming terms, `another_list` and `some_list` now refer to different objects). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    "says to make a copy of `some_list` and call it `another_list`.  These are now independent. I can modify one without modifiying another.  (In programming terms, `another_list` and `some_list` now refer to different objects). \n",
+    "\n",
     "In our `Mary` and `Jane` analogy, the sentence would be:\n",
     "\n",
     "```\n",
     "I cloned Mary and named the clone Jane.\n",
     "```\n",
     "\n",
-    "Now the two labels point to to different people.  If I say `Jane has red hair` it does not imply that `Mary has red hair`.  This is why we can modify `some_list` (Mary) and see no change on `another_list` (clone Jane).  "
+    "Now the two labels point to to different people.  If I say `Jane has red hair` it does not imply that `Mary has red hair`.  This is why we can modify `some_list` (Mary) and see no change on `another_list` (clone Jane).  \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "### Summary\n",
-    "\n",
-    "Python lists start at `0` and count to `N-1`.  Negative numbers (starting at `-1`) count from the right side.\n",
-    "\n",
-    "\"`:`\" lets you *slice* lists.  Using `some_list[i:j+1]` returns the $i^{th}$ through the $j^{th}$ entries in the list. \n",
-    "\n",
-    "\n",
-    "#### More fun facts \n",
-    "`some_list[:3]` gives the $0^{th}$ through the $2^{nd}$ entries.\n",
-    "\n",
-    "`some_list[1:-1]` gives the $1^{st}$ through the last entries."
+    "### Tuples\n",
+    "Tuples are like lists, but are *immutable*, meaning that once you've made them they can't be changed. "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
-    "+ Change $i^{th}$ entry to $x$ by `some_list[i] = x`\n",
-    "+ Append $x$ to the end by `some_list.append(x)`\n",
-    "+ Insert $x$ at the $i^{th}$ position by `some_list.insert(i,x)`\n",
-    "+ Remove the $i^{th}$ entry by `some_list.pop(i)`\n",
-    "+ Remove the first entry with value $x$ by `some_list.remove(x)`"
+    "some_tuple = (10,20,30)\n",
+    "print(some_tuple[1])"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
+    "collapsed": false
    },
+   "outputs": [],
    "source": [
-    "### Extra problems\n",
-    "\n",
-    "+ Create a list of "
+    "some_tuple = (10,20,30)\n",
+    "some_tuple[1] = 50\n",
+    "print(some_tuple[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "some_tuple = (10,20,30)\n",
+    "some_tuple.append(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strings\n",
+    "Strings hold text.  They are actually lists under the hood. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionaries\n",
+    "Dictionaries map `keys` to `values`.  The `keys` and `values` can be almost anything. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "some_dict = {\"a\":10,\n",
+    "             \"b\":20,\n",
+    "             \"c\":30}\n",
+    "print(some_dict[\"a\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "some_dict = {\"a\":10,\"b\":20,\"c\":30}\n",
+    "print(some_dict[\"b\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "some_dict = {\"a\":10,\"b\":20,\"c\":30}\n",
+    "print(some_dict[10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "some_dict = {\"a\":10,\"b\":20,\"c\":30}\n",
+    "some_dict[\"c\"] = 50\n",
+    "print(some_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "some_dict = {\"a\":10,\"b\":20,\"c\":30}\n",
+    "some_dict[\"d\"] = 50\n",
+    "print(some_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "some_dict = {\"a\":10,\"b\":20,\"c\":30}\n",
+    "x = some_dict.pop(\"a\")\n",
+    "print(x)\n",
+    "print(some_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
