--- a/inductive-python/06_numpy_arrays.ipynb
+++ b/inductive-python/06_numpy_arrays.ipynb
@@ -14,7 +14,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   }
  ],
  "metadata": {
