--- a/practicum/02_puzzles/Puzzles.ipynb
+++ b/practicum/02_puzzles/Puzzles.ipynb
@@ -189,7 +189,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "GRAPHING STUFF HERE"
+   ]
   },
   {
    "cell_type": "markdown",
