--- a/practicum/03_simulation/simulations.ipynb
+++ b/practicum/03_simulation/simulations.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Note: the goal is to simulate this. Even if you know how to solve this analytically, you should still write a program). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Coins in a row\n",
     "\n",
     "You place 100 coins heads up in a row and number them by position, with the coin all the way on the left No. 1 and the one on the rightmost edge No. 100. Next, for every number N, from 1 to 100, you flip over every coin whose position is a multiple of N. For example, first you’ll flip over all the coins, because every number is a multiple of 1. Then you’ll flip over all the even-numbered coins, because they’re multiples of 2. Then you’ll flip coins No. 3, 6, 9, 12 … And so on.\n",
@@ -26,22 +33,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are studying a protein that causes cells to orient themselves perpindicular to a growth substrate.  You can measure the relative orientation of cells to within $5 ^{\\circ}$.  "
+    "You are studying a protein that causes cells to orient themselves perpendicular to a growth substrate.  You can measure the relative orientation of cells to within $5 ^{\\circ}$. You make 10 measurements of a wildtype protein and 10 with a mutant.  You make the following observations.  \n",
+    "\n",
+    "Assuming that the measurement error is normally distributed, can you expect the mean???"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -58,7 +53,7 @@
     "collapsed": true
    },
    "source": [
-    "You are doing a classic blue/white lacZ mutant screen, where bacterial mutants of interest grow blue colonies.  You screen a library containing 10,000 mutants.  You expect that 1/1,000 mutants will be blue.  Assuming no bias in the library, how many colonies do you need to look at to have a < 2% chance of missing a mutant? (You can report to a factor of 10). "
+    "You are doing a classic blue/white lacZ mutant screen, where bacterial mutants of interest have blue colonies rather than white colonies.  You screen a library containing 10,000 mutants.  You expect that 1/1,000 mutants will be blue.  Assuming no bias in the library, how many colonies do you need to look at to have a < 2% chance of missing a mutant? You can report at a factor of ten.  "
    ]
   },
   {
@@ -71,31 +66,150 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "You do a `bind-n-seq` experiment in which you take a pool of 100 DNA sequences with an even frequency of 1% each.  You then throw a DNA binding protein into the mix which binds to 1/2 of the sequences with high affinity, but does not bind to the other sequences at all (so the pool is now 2% A, 0% B).  Unfortunately, you can only do the binding reaction at small volumes, so you end up with only 20 DNA sequences of each type. \n",
+    "\n",
+    "1. \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np \n",
+    "dna_frequencies = np.random.binomial(20,0.1,20)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 1, 3, 2, 0, 1, 2, 3, 1, 0, 2, 4, 4, 4, 2, 2, 2, 3, 2, 2])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dna_frequencies\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function binomial:\n",
+      "\n",
+      "binomial(...) method of mtrand.RandomState instance\n",
+      "    binomial(n, p, size=None)\n",
+      "    \n",
+      "    Draw samples from a binomial distribution.\n",
+      "    \n",
+      "    Samples are drawn from a binomial distribution with specified\n",
+      "    parameters, n trials and p probability of success where\n",
+      "    n an integer >= 0 and p is in the interval [0,1]. (n may be\n",
+      "    input as a float, but it is truncated to an integer in use)\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    n : float (but truncated to an integer)\n",
+      "            parameter, >= 0.\n",
+      "    p : float\n",
+      "            parameter, >= 0 and <=1.\n",
+      "    size : int or tuple of ints, optional\n",
+      "        Output shape.  If the given shape is, e.g., ``(m, n, k)``, then\n",
+      "        ``m * n * k`` samples are drawn.  Default is None, in which case a\n",
+      "        single value is returned.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    samples : ndarray or scalar\n",
+      "              where the values are all integers in  [0, n].\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    scipy.stats.distributions.binom : probability density function,\n",
+      "        distribution or cumulative density function, etc.\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    The probability density for the binomial distribution is\n",
+      "    \n",
+      "    .. math:: P(N) = \\binom{n}{N}p^N(1-p)^{n-N},\n",
+      "    \n",
+      "    where :math:`n` is the number of trials, :math:`p` is the probability\n",
+      "    of success, and :math:`N` is the number of successes.\n",
+      "    \n",
+      "    When estimating the standard error of a proportion in a population by\n",
+      "    using a random sample, the normal distribution works well unless the\n",
+      "    product p*n <=5, where p = population proportion estimate, and n =\n",
+      "    number of samples, in which case the binomial distribution is used\n",
+      "    instead. For example, a sample of 15 people shows 4 who are left\n",
+      "    handed, and 11 who are right handed. Then p = 4/15 = 27%. 0.27*15 = 4,\n",
+      "    so the binomial distribution should be used in this case.\n",
+      "    \n",
+      "    References\n",
+      "    ----------\n",
+      "    .. [1] Dalgaard, Peter, \"Introductory Statistics with R\",\n",
+      "           Springer-Verlag, 2002.\n",
+      "    .. [2] Glantz, Stanton A. \"Primer of Biostatistics.\", McGraw-Hill,\n",
+      "           Fifth Edition, 2002.\n",
+      "    .. [3] Lentner, Marvin, \"Elementary Applied Statistics\", Bogden\n",
+      "           and Quigley, 1972.\n",
+      "    .. [4] Weisstein, Eric W. \"Binomial Distribution.\" From MathWorld--A\n",
+      "           Wolfram Web Resource.\n",
+      "           http://mathworld.wolfram.com/BinomialDistribution.html\n",
+      "    .. [5] Wikipedia, \"Binomial-distribution\",\n",
+      "           http://en.wikipedia.org/wiki/Binomial_distribution\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    Draw samples from the distribution:\n",
+      "    \n",
+      "    >>> n, p = 10, .5  # number of trials, probability of each trial\n",
+      "    >>> s = np.random.binomial(n, p, 1000)\n",
+      "    # result of flipping a coin 10 times, tested 1000 times.\n",
+      "    \n",
+      "    A real world example. A company drills 9 wild-cat oil exploration\n",
+      "    wells, each with an estimated probability of success of 0.1. All nine\n",
+      "    wells fail. What is the probability of that happening?\n",
+      "    \n",
+      "    Let's do 20,000 trials of the model, and count the number that\n",
+      "    generate zero positive results.\n",
+      "    \n",
+      "    >>> sum(np.random.binomial(9, 0.1, 20000) == 0)/20000.\n",
+      "    # answer = 0.38885, or 38%.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(np.random.binomial)"
+   ]
   },
   {
    "cell_type": "code",
